@@ -18,8 +18,10 @@ import sys, os
 cwd = os.getcwd()
 project_root = os.path.dirname(cwd)
 
-sys.path.insert(0, project_root)
-from ..package_metadata import p
+# package data
+about = {}
+with open("../vcspull/__about__.py") as fp:
+    exec(fp.read(), about)
 
 # If extensions (or modules to document with autodoc) are in another directory,
 # add these directories to sys.path here. If the directory is relative to the
@@ -53,8 +55,8 @@ source_suffix = '.rst'
 master_doc = 'index'
 
 # General information about the project.
-project = p.title
-copyright = p.copyright
+project = about['__title__']
+copyright = about['__copyright__']
 
 rst_prolog = """
 .. note::
@@ -70,9 +72,9 @@ rst_prolog = """
 # built documents.
 #
 # The short X.Y version.
-version = '%s' % ('.'.join(p.version.split('.'))[:2])
+version = '%s' % ('.'.join(about['__version__'].split('.'))[:2])
 # The full version, including alpha/beta/rc tags.
-release = '%s' % (p.version)
+release = '%s' % (about['__version__'])
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
@@ -189,7 +191,7 @@ html_static_path = ['_static']
 #html_file_suffix = None
 
 # Output file base name for HTML help builder.
-htmlhelp_basename = '%sdoc' % p.title
+htmlhelp_basename = '%sdoc' % about['__title__']
 
 
 # -- Options for LaTeX output --------------------------------------------------
@@ -208,8 +210,8 @@ latex_elements = {
 # Grouping the document tree into LaTeX files. List of tuples
 # (source start file, target name, title, author, documentclass [howto/manual]).
 latex_documents = [
-  ('index', '{0}.tex'.format(p.package_name), '{0} Documentation'.format(p.title),
-   p.author, 'manual'),
+  ('index', '{0}.tex'.format(about['__package_name__']), '{0} Documentation'.format(about['__title__']),
+   about['__author__'], 'manual'),
 ]
 
 # The name of an image file (relative to this directory) to place at the top of
@@ -238,8 +240,8 @@ latex_documents = [
 # One entry per manual page. List of tuples
 # (source start file, name, description, authors, manual section).
 man_pages = [
-    ('index', p.package_name, '{0} Documentation'.format(p.title),
-    p.author, 1),
+    ('index', about['__package_name__'], '{0} Documentation'.format(about['__title__']),
+    about['__author__'], 1),
 ]
 
 # If true, show URL addresses after external links.
@@ -252,21 +254,21 @@ man_pages = [
 # (source start file, target name, title, author,
 #  dir menu entry, description, category)
 texinfo_documents = [
-    ('index', '{0}'.format(p.package_name), '{0} Documentation'.format(p.title),
-    p.author, p.package_name, p.description, 'Miscellaneous'),
+    ('index', '{0}'.format(about['__package_name__']), '{0} Documentation'.format(about['__title__']),
+    about['__author__'], about['__package_name__'], about['__description__'], 'Miscellaneous'),
 ]
 
-# Documents to append as an appendix to all manuals.
+# documents to append as an appendix to all manuals.
 #texinfo_appendices = []
 
-# If false, no module index is generated.
-#texinfo_domain_indices = True
+# if false, no module index is generated.
+#texinfo_domain_indices = true
 
-# How to display URL addresses: 'footnote', 'no', or 'inline'.
+# how to display url addresses: 'footnote', 'no', or 'inline'.
 #texinfo_show_urls = 'footnote'
 
-# If true, do not generate a @detailmenu in the "Top" node's menu.
-#texinfo_no_detailmenu = False
+# if true, do not generate a @detailmenu in the "top" node's menu.
+#texinfo_no_detailmenu = false
 
-# Example configuration for intersphinx: refer to the Python standard library.
+# example configuration for intersphinx: refer to the python standard library.
 intersphinx_mapping = {'http://docs.python.org/': None, 'pip': ('http://sphinx.readthedocs.org/en/latest/', None)}
